...
        field.smartQuotesType = .no
        field.smartInsertDeleteType = .no
        field.keyboardType = .webSearch
        field.returnKeyType = .go
        field.clearButtonMode = .never
        field.font = .systemFont(ofSize: 17)
        field.accessibilityIdentifier = "omniboxField"
        field.addTarget(
            context.coordinator, action: #selector(Coordinator.editingChanged(_:)),
            for: .editingChanged)
        return field
    }

...
